ProFit Event App/objects/Speaker__c.object
<CustomObject>
    <fields>
        <fullName>Company__c</fullName>
        <description>Speaker&apos;s Current Company</description>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Speaker&apos;s Email</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Speaker&apos;s Phone</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <label>Speaker</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Speaker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Speakers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>